<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_select_option" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdo_btn_text_precessing"
                android:layout_width="wrap_content"
                android:checked="true"
                android:text="@string/tv_title_text_processing"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rdo_btn_maths_operation"
                android:layout_width="wrap_content"
                android:text="@string/tv_title_maths_operation"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/ll_maths"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="3"
                android:layout_marginTop="@dimen/dp16"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:layout_margin="@dimen/dp8"
                android:id="@+id/edt_input1"
                android:hint="@string/hint_number"
                android:text="10"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:layout_margin="@dimen/dp8"
                android:id="@+id/spn_option"
                android:layout_width="wrap_content"
                android:entries="@array/array_math_operation"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_margin="@dimen/dp8"
                android:id="@+id/edt_input2"
                android:hint="@string/hint_number"
                android:layout_width="0dp"
                android:text="10"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                />
            </LinearLayout>
            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_title_calculate" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_text_processiong"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_please_enter_input_text_below" />

            <EditText
                android:id="@+id/edt_input"
                android:hint="@string/hint_input"
                android:text="Test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_title_submit" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>